play, pause, stop, scrubber change and volume change logic done

--- a/Audio Player/Base.lproj/Main.storyboard
+++ b/Audio Player/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PEr-h2-ha9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="jVC-WU-FCe">
             <objects>
-                <viewController id="PEr-h2-ha9" customClass="ViewController" customModule="AudioPlayerDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="PEr-h2-ha9" customClass="ViewController" customModule="Audio_Player" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5XL-x3-pPs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -31,7 +31,7 @@
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7nI-LO-hcM">
                                                 <rect key="frame" x="200" y="0.0" width="176" height="31"/>
                                                 <connections>
-                                                    <action selector="scrubberMoved:" destination="PEr-h2-ha9" eventType="valueChanged" id="dBv-Eg-hO9"/>
+                                                    <action selector="changedScrubber:" destination="PEr-h2-ha9" eventType="valueChanged" id="RFo-wy-djn"/>
                                                 </connections>
                                             </slider>
                                         </subviews>
@@ -48,7 +48,7 @@
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7HW-7M-y5j">
                                                 <rect key="frame" x="200" y="0.0" width="176" height="31"/>
                                                 <connections>
-                                                    <action selector="volumeChanged:" destination="PEr-h2-ha9" eventType="valueChanged" id="W3m-6U-akX"/>
+                                                    <action selector="changedVolume:" destination="PEr-h2-ha9" eventType="valueChanged" id="bY7-cJ-Awv"/>
                                                 </connections>
                                             </slider>
                                         </subviews>
@@ -60,13 +60,13 @@
                                 <items>
                                     <barButtonItem title="Item" image="play.fill" catalog="system" id="3fh-g5-pHH">
                                         <connections>
-                                            <action selector="playAudio:" destination="PEr-h2-ha9" id="EFd-LB-zaI"/>
+                                            <action selector="clickPlay:" destination="PEr-h2-ha9" id="0Es-Tf-6cu"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="9lq-3z-hNj"/>
                                     <barButtonItem title="Stop Btn" image="stop.fill" catalog="system" id="CFf-bW-mcg">
                                         <connections>
-                                            <action selector="stopAudio:" destination="PEr-h2-ha9" id="WPt-IO-Wm6"/>
+                                            <action selector="clickStop:" destination="PEr-h2-ha9" id="Kgs-F1-yyf"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -85,14 +85,14 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="playBtn" destination="3fh-g5-pHH" id="StX-NM-2tJ"/>
-                        <outlet property="scrubber" destination="7nI-LO-hcM" id="Kys-b7-HEK"/>
-                        <outlet property="volumeSlider" destination="7HW-7M-y5j" id="a6G-bU-CAs"/>
+                        <outlet property="btnPlay" destination="3fh-g5-pHH" id="W10-je-pjI"/>
+                        <outlet property="sliderScrubber" destination="7nI-LO-hcM" id="k8G-Pz-yRi"/>
+                        <outlet property="sliderVolume" destination="7HW-7M-y5j" id="Kfd-OE-jhK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Oj-5G-yti" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-67" y="115"/>
+            <point key="canvasLocation" x="-68" y="143"/>
         </scene>
     </scenes>
     <resources>
